tests/snapshots/demo_layer_snapshots__cupertino.snap
---
source: tests/demo_layer_snapshots.rs
expression: "snapshot_of(cupertino_demo::CupertinoDemoApp, 8)"
---
Offset dx=0.00 dy=0.00
  Picture bounds=(0.00,0.00 900.00x760.00)
    Save
    DrawRect rect=(0.00,0.00 900.00x760.00) fill #FFFFFFFF
    Restore
    Save
    DrawRect rect=(0.00,0.00 900.00x760.00) fill #FFFFFFFF
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Item 1" #3C3C434C lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal size=17.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,427.29,339.40,0.00,1.00]
    Restore
    Save
    DrawRRect rrect=(0.00,0.00 129.55x52.40 r=12.00/12.00/12.00/12.00) fill #007AFFFF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,385.22,375.80,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Push Details" #FFFFFFFF lines=1 runs=[len=12 family=SansSerif weight=400 style=Normal size=17.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,405.22,391.80,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Item 2" #3C3C434C lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal size=17.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,427.29,444.20,0.00,1.00]
    Restore
    Save
    DrawRect rect=(0.00,0.00 900.00x44.00) fill #F9F9F9F0
    DrawRect rect=(0.00,43.00 900.00x1.00) fill #0000004D
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Cupertino Demo" #000000FF lines=1 runs=[len=14 family=SansSerif weight=600 style=Normal size=17.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,391.40,11.80,0.00,1.00]
    Restore
    Save
    DrawRect rect=(0.00,0.00 900.00x50.00) fill #F9F9F9F0 xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,710.00,0.00,1.00]
    DrawRect rect=(0.00,0.00 900.00x1.00) fill #0000004D xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,710.00,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "\u{f447}" #007AFFFF lines=1 runs=[len=3 family=Name("CupertinoIcons") weight=400 style=Normal size=30.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,210.32,712.00,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Home" #007AFFFF lines=1 runs=[len=4 family=SansSerif weight=500 style=Normal size=10.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,212.03,744.00,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "\u{f411}" #999999FF lines=1 runs=[len=3 family=Name("CupertinoIcons") weight=400 style=Normal size=30.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,660.85,712.00,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Settings" #999999FF lines=1 runs=[len=8 family=SansSerif weight=500 style=Normal size=10.00] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,657.70,744.00,0.00,1.00]
    Restore
