tests/snapshots/demo_layer_snapshots__gallery.snap
---
source: tests/demo_layer_snapshots.rs
expression: "snapshot_of(widgets_gallery::Gallery, 5)"
---
Offset dx=0.00 dy=0.00
  Picture bounds=(0.00,0.00 900.00x760.00)
    Save
    DrawRect rect=(0.00,0.00 900.00x760.00) fill #121218FF
    Restore
    Save
    Paragraph offset=(0.00,0.00) "FLUI widget gallery" #000000FF lines=1 runs=[len=19 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,391.19,24.00,0.00,1.00]
    Restore
  ClipRRect rrect=(24.00,56.80 64.00x64.00 r=32.00/32.00/32.00/32.00) clip=antialias
    Picture bounds=(24.00,56.80 64.00x64.00)
      Save
      DrawRect rect=(0.00,0.00 64.00x64.00) fill #E53935FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,24.00,56.80,0.00,1.00]
      Restore
  ClipRRect rrect=(100.00,56.80 64.00x64.00 r=32.00/32.00/32.00/32.00) clip=antialias
    Picture bounds=(100.00,56.80 64.00x64.00)
      Save
      DrawRect rect=(0.00,0.00 64.00x64.00) fill #1E88E5FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,100.00,56.80,0.00,1.00]
      Restore
  ClipRRect rrect=(176.00,56.80 64.00x64.00 r=32.00/32.00/32.00/32.00) clip=antialias
    Picture bounds=(176.00,56.80 64.00x64.00)
      Save
      DrawRect rect=(0.00,0.00 64.00x64.00) fill #43A047FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,176.00,56.80,0.00,1.00]
      Restore
  Opacity alpha=0.40
    ClipRRect rrect=(24.00,132.80 64.00x64.00 r=32.00/32.00/32.00/32.00) clip=antialias
      Picture bounds=(24.00,132.80 64.00x64.00)
        Save
        DrawRect rect=(0.00,0.00 64.00x64.00) fill #E53935FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,24.00,132.80,0.00,1.00]
        Restore
  Opacity alpha=0.40
    ClipRRect rrect=(100.00,132.80 64.00x64.00 r=32.00/32.00/32.00/32.00) clip=antialias
      Picture bounds=(100.00,132.80 64.00x64.00)
        Save
        DrawRect rect=(0.00,0.00 64.00x64.00) fill #1E88E5FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,100.00,132.80,0.00,1.00]
        Restore
  Opacity alpha=0.40
    ClipRRect rrect=(176.00,132.80 64.00x64.00 r=32.00/32.00/32.00/32.00) clip=antialias
      Picture bounds=(176.00,132.80 64.00x64.00)
        Save
        DrawRect rect=(0.00,0.00 64.00x64.00) fill #43A047FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,176.00,132.80,0.00,1.00]
        Restore
  Picture bounds=(24.00,220.80 852.00x48.80)
    Save
    DrawRect rect=(0.00,0.00 852.00x48.80) fill #262630FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,24.00,220.80,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "centered in a card" #000000FF lines=1 runs=[len=18 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,394.48,236.80,0.00,1.00]
    Restore
