tests/snapshots/demo_layer_snapshots__vertical-slice.snap
---
source: tests/demo_layer_snapshots.rs
expression: "snapshot_of(vertical_slice_demo::DemoApp, 15)"
---
Offset dx=0.00 dy=0.00
  Picture bounds=(0.00,0.00 900.00x760.00)
    Save
    DrawRect rect=(0.00,0.00 900.00x760.00) fill #121218FF
    Restore
    Save
    Paragraph offset=(0.00,0.00) "Count: 0" #000000FF lines=1 runs=[len=8 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,16.00,24.00,0.00,1.00]
    Restore
    Save
    DrawRect rect=(0.00,0.00 23.94x32.80) fill #2196F3FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,83.86,16.00,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "+" #000000FF lines=1 runs=[len=1 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,91.86,24.00,0.00,1.00]
    Restore
    Save
    DrawRect rect=(0.00,0.00 91.28x32.80) fill #4CAF50FF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,404.36,48.80,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "View details" #000000FF lines=1 runs=[len=12 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,412.36,56.80,0.00,1.00]
    Restore
  ClipRect rect=(16.00,81.60 868.00x200.00) clip=hard
    Offset dx=16.00 dy=81.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 0" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=113.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 1" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=145.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 2" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=177.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 3" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=209.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 4" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=241.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 5" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=273.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 6" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=305.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 7" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=337.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 8" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=369.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 9" #000000FF lines=1 runs=[len=6 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=401.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 10" #000000FF lines=1 runs=[len=7 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=433.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 11" #000000FF lines=1 runs=[len=7 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=465.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 12" #000000FF lines=1 runs=[len=7 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=497.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 13" #000000FF lines=1 runs=[len=7 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
    Offset dx=16.00 dy=529.60
      Picture bounds=(4.00,4.00 860.00x16.80)
        Save
        Paragraph offset=(0.00,0.00) "Item 14" #000000FF lines=1 runs=[len=7 family=SansSerif weight=400 style=Normal] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,4.00,4.00,0.00,1.00]
        Restore
  Picture bounds=(402.00,281.60 96.00x64.00)
    Save
    DrawRect rect=(0.00,0.00 96.00x64.00) fill #40405AFF xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,402.00,281.60,0.00,1.00]
    Restore
    Save
    Paragraph offset=(0.00,0.00) "" #000000FF lines=1 runs=[] xf=[1.00,0.00,0.00,0.00,0.00,1.00,0.00,0.00,0.00,0.00,1.00,0.00,402.00,281.60,0.00,1.00]
    Restore
